@@ -34,7 +34,7 @@ Applications, including their lifecyle, are controlled by frontends. The SDK pro
 
 
 \paragraph{PLAssimp}
-Mesh loaders using \emph{ASSIMP - Open Asset Import Library} (\url{http://assimp.sourceforge.net/})
+34 mesh and 34 scene loaders using \emph{ASSIMP - Open Asset Import Library} (\url{http://assimp.sourceforge.net/})\footnote{3ds, obj, Blender, Collada etc. for a full list, please have a look at \url{assimp.sourceforge.net/main_features_formats.html}}
 
 
 \paragraph{PLImageLoaderEXR}
