@@ -4,12 +4,13 @@ Changes in PixelLight 0.9.9-R1 (not yet released)
            GL_EXT_texture_filter_anisotropic, GL_EXT_Cg_shader, GL_AMD_compressed_3DC_texture, GL_NV_get_tex_image, GL_OES_mapbuffer, GL_OES_element_index_uint, GL_OES_texture_3D,
            GL_ARB_draw_buffers, GL_NV_fbo_color_attachments, GL_NV_read_buffer, GL_ANGLE_framebuffer_blit, GL_ANGLE_framebuffer_multisample, GL_OES_packed_depth_stencil,
            GL_OES_depth24 and GL_OES_depth32
+- Feature: The plugin "PLAssimp" using "ASSIMP - Open Asset Import Library" is now also able to load in complete scenes (without merging everything into one huge mesh)
 - Change (Linux): Tweaked the compiler and linker settings to reduce the binary size
 - Change: Updated the free open source particle engine "SPARK" (http://spark.developpez.com) to version 1.5.5
 - Change: Updated FMOD Ex from version "4.32.08" to "4.36.04" (has Android support)
 - Change: Updated sample sound files to make them work with FMOD Ex as well
 - Bugfix: Loop and 2D are now working within the FMOD Ex sound backend
-- Bugfix: PLRendererOpenGL & PLRendererOpenGLES2: Automatic texture uncompression was broken ("Passing "empty" images to the GPU no longer creates internal image data"-change in PixelLight 0.9.6-R1)
+- Bugfix: PLRendererOpenGL & PLRendererOpenGLES2: Automatic texture decompression was broken ("Passing "empty" images to the GPU no longer creates internal image data"-change in PixelLight 0.9.6-R1)
 - Bugfix: "PLEngine::EngineApplication": The clear color hint within scenes was broken
 - Bugfix (Windows): "PLFrontendOS::OSWindowWindows::SetPositionSize()" was not setting the window size correctly (the window border must be ignored)
 - Bugfix (Linux): "PLFrontendOS::OSWindowLinux::GetX()" & "PLFrontendOS::OSWindowLinux::GetY()" were not returning the window position correctly (window decoration issue)
